[package]
name = "txapi"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
chrono = "0.4.39"
uuid = { version = "1.13.1", features = ["v4"] }
rand = "0.9.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
